# home-first-aid-kit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  release-please-config.json  renovate.json  requirements.txt  schema.yml
.github/workflows/: ci.yml  docker-publish.yml  home-first-aid-kit.yml  release-please.yml
app/api/: apps.py  urls.py
app/healthbox/: apis.py  apps.py  models.py  serializers.py  urls.py
app/healthbox/migrations/: 0001_initial.py
backend/: pyproject.toml
backend/accounts/: admin.py  invitation_urls.py  models.py  permissions.py  selectors.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/tests/: test_auth_invitations.py
backend/config/: celery.py  settings.py  urls.py
backend/core/: admin.py  mixins.py  models.py  pagination.py  serializers.py  uploads.py  utils.py  validators.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_changelog_action.py
backend/core/tests/: test_admin_removed.py  test_health.py  test_logging.py  test_renderers.py  test_schema.py
backend/medicines/: admin.py  models.py  serializers.py  urls.py  views.py
backend/medicines/migrations/: 0001_initial.py  0002_medicine_low_stock_threshold.py  0003_alter_medicine_instruction_file.py  0004_alter_medicine_instruction_file_alter_medicine_photo.py  0005_remove_medicine_photo.py
backend/medicines/reference_parser/: parser.py  views.py
backend/medicines/tests/: test_drug_lookup_views.py  test_expiry_status.py  test_medicines_api.py  test_reference_parser.py  test_reference_parser_variants.py
backend/medicines/tests/fixtures/: reference_page.html  reference_rls_filter_table.html  reference_rls_filter_table_multi_dosage.html  reference_rls_filter_table_no_dosage.html  reference_single_page.html
backend/notifications/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py
backend/notifications/tests/: test_push_subscriptions.py  test_tasks.py
config/: asgi.py  base.py  urls.py  wsgi.py
docker/backend/: Dockerfile  entrypoint.sh
docker/frontend/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
docs/: ARCHITECTURE.md  mkdocs.yml
docs/site/: index.html
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/public/: offline.html
frontend/src/: App.vue  main.js  sw.js
frontend/src/api/: client.js
frontend/src/components/: AttentionSummary.vue  DrugLookupPanel.vue  MediaImage.vue  PhotoUploadField.vue  ReferenceDataNote.vue  Skeleton.vue  StatusBadge.vue
frontend/src/composables/: useMedicineFilters.js
frontend/src/constants/: medicine.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js  auth.spec.js  theme.js
frontend/src/styles/: main.css
frontend/src/utils/: expiry.js  expiry.spec.js  image.js  image.spec.js  medicineCount.js  medicineCount.spec.js  push.js
frontend/src/views/: AcceptInviteView.vue  ChangeLogView.vue  InvitationsView.vue  LoginView.vue  MedicineFormView.vue  MedicinesView.vue  ProfileView.vue  RegisterView.vue  ShoppingView.vue
