[project]
name = "home-first-aid-kit-backend"
version = "1.0.0"
description = "Django REST backend for Home First-Aid Kit"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "Django>=5.2,<5.3",
    "djangorestframework>=3.16,<3.17",
    "djangorestframework-simplejwt>=5.5,<5.6",
    "django-cors-headers>=4.7,<4.8",
    "dj-database-url>=2.3,<2.4",
    "gunicorn>=23.0,<24.0",
    "psycopg[binary]>=3.2,<3.3",
    "python-dotenv>=1.2.2,<1.3",
    "playwright>=1.52,<1.53",
    "pillow>=12.2.0,<12.3",
    "redis>=5.2,<6.0",
    "celery>=5.4,<6.0",
    "pywebpush>=2.0,<3.0",
    "drf-spectacular>=0.29.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "ruff>=0.11,<0.12",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "DJ"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501"]
"medicines/reference_parser/parser.py" = ["E501"]

[tool.coverage.run]
source = ["accounts", "core", "medicines", "notifications"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
skip_empty = true
